# universo-platformo-rust

./: .gitignore  Cargo.toml  DOCUMENTATION-ORGANIZATION-SUMMARY.md  DOCUMENTATION-VALIDATION-REPORT-RU.md  DOCUMENTATION-VALIDATION-REPORT.md  NEXT-STEPS.md  README-RU.md  README.md  REVIEW-RESULTS.md
.github/agents/: copilot-instructions.md
.github/instructions/: github-labels.md
.specify/: README.md
.specify/memory/: constitution.md
.specify/specs/: README.md
.specify/specs/001-initialize-rust-platformo/: ANALYSIS-REPORT.md  IMPLEMENTATION-ROADMAP.md  QUICK-REFERENCE.md  data-model.md  project-review-summary-v2-RU.md  project-review-summary-v2.md  quickstart.md  research.md  spec.md  tasks.md  tasks.md.backup
.specify/specs/001-initialize-rust-platformo/checklists/: project-review.md
.specify/specs/001-initialize-rust-platformo/contracts/: health.md
specs/001-initialize-rust-platformo/: ARCHITECTURAL-COMPARISON.md  ARCHITECTURAL-UPDATES-SUMMARY.md  IMPLEMENTATION-ROADMAP.md  IMPROVEMENT-SUMMARY.md  MISSING-PATTERNS-ANALYSIS.md  QUICK-REFERENCE.md  plan.md  project-review-summary.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-initialize-rust-platformo/checklists/: requirements.md
specs/001-initialize-rust-platformo/contracts/: README.md
