[workspace]
resolver = "2"

# Members will be added as packages are created
# Example:
# members = [
#     "packages/clusters-frt",
#     "packages/clusters-srv",
# ]
members = [
    "packages/start-frt/base",
    "packages/start-srv/base",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Universo Platformo Team <universo.pro@yandex.com>"]
license = "Omsk-Open-License"
repository = "https://github.com/teknokomo/universo-platformo-rust"

[workspace.dependencies]
# Frontend dependencies (Yew ecosystem)
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

# Backend dependencies (Actix ecosystem)
actix-web = "4"
actix-cors = "0.7"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-rt = "2"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev.package."*"]
opt-level = 2
